--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <form action="/" enctype="multipart/form-data" method="post">
       <input type="file" name="file-to-upload">
       <input type="submit" value="Upload">
-    </form>  
+    </form>
+    <div id="flnam">Some Text</div>  
   </body>
 </html>
